changed scrollbar fixed responsive

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
 *{
     scroll-behavior: smooth;
 }
+::-webkit-scrollbar{
+    width:6px;
+}
+::-webkit-scrollbar-thumb {
+    background: teal; 
+    border: 4px solid teal;
+    border-radius: 10px;
+    background-clip: padding-box; 
+
+  }
